--- a/templates/pagina/index.html
+++ b/templates/pagina/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/estatics/style.css">
-
-        
-
-    </head>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/funcionalidad/style.css">
+    <script src="/funcionalidad/estilo.js"></script>
+</head>
     
     <body class="body">
         <h1 id="h1">PROYECTO POO</h1>
@@ -18,42 +16,42 @@
        <table border="4px" id="tabla" align="center" >
         <tr>
            
-            <td id="cajon"><input type="text"id="cajon1" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon2" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon3" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon4" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon5" maxlength="1"></td>
+            <td><input type=" text" name="conjetura" id="cajon1" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[0] }}"></td>
+            <td><input type=" text" name="conjetura" id="cajon2" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[1] }}"></td>
+            <td><input type=" text" name="conjetura" id="cajon3" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[2] }}"></td>
+            <td><input type=" text" name="conjetura" id="cajon4" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[3] }}"></td>
+            <td><input type=" text" name="conjetura" id="cajon5" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[4] }}"></td>
         </tr>
         <tr>
-            <td id="cajon"><input type="text"id="cajon1" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon2" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon3" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon4" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon5" maxlength="1"></td>
+            <td><input type="text" name="conjetura" id="cajon1" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[5] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon2" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[6] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon3" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[7] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon4" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[8] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon5" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[9] }}"></td>
         </tr>
         <tr>
-            <td id="cajon"><input type="text"id="cajon1" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon2" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon3" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon4" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon5" maxlength="1"></td>
+            <td><input type="text" name="conjetura" id="cajon1" maxlength="1"  oninput="this.form.submit();"class="{{ clases_css[10] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon2" maxlength="1"  oninput="this.form.submit();"class="{{ clases_css[11] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon3" maxlength="1"  oninput="this.form.submit();"class="{{ clases_css[12] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon4" maxlength="1"  oninput="this.form.submit();"class="{{ clases_css[13] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon5" maxlength="1"  oninput="this.form.submit();"class="{{ clases_css[14] }}"></td>
         </tr>
         <tr>
-            <td id="cajon"><input type="text"id="cajon1" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon2" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon3" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon4" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon5" maxlength="1"></td>
+            <td><input type="text" name="conjetura" id="cajon1" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[15] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon2" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[16] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon3" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[17] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon4" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[18] }}"></td>          
+            <td><input type="text" name="conjetura" id="cajon5" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[19] }}"></td>
         </tr>
         <tr>
-            <td id="cajon"><input type="text"id="cajon1" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon2" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon3" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon4" maxlength="1"></td>
-            <td id="cajon"><input type="text"id="cajon5" maxlength="1"></td>
+            <td><input type="text" name="conjetura" id="cajon1" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[20] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon2" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[21] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon3" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[22] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon4" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[23] }}"></td>
+            <td><input type="text" name="conjetura" id="cajon5" maxlength="1" oninput="this.form.submit();" class="{{ clases_css[24] }}"></td>
         </tr>
        </table>
-       <button class="boton" >probar</button>
+   
        </form>
     </body>
 </html>
